fix bug that no double scroll bar in Portrait Mode

--- a/css/styles.css
+++ b/css/styles.css
@@ -33,8 +33,6 @@
 .chessBookOutptArea {
     height: 60%;
     width: 35%;
-    overflow:auto;
-	
 }
 
 .chessBookLabel {
